--- a/src/styles/tink-fieldset.scss
+++ b/src/styles/tink-fieldset.scss
@@ -4,6 +4,8 @@
 @import "../../bower_components/tink-core/dist/tink/mixins";
 
 .fieldset-editable {
+  background-color: #f8f8f8;
+  padding: rem(15);
 
   /**
    * Focus styling
@@ -12,9 +14,11 @@
   .faux-input,
   select,
   textarea {
+    transition: all .2s linear !important;
+
     &:focus {
       background-color: $white;
-      border: 1px solid $input-border-focus !important;
+      border: 1px solid $input-border-focus;
       // cursor: default !important;
     }
   }
@@ -41,9 +45,18 @@
     .faux-input,
     select,
     textarea {
-      background: transparent;
-      border: 1px solid transparent;
-      // cursor: default;
+      background-color: rgba($white, 0);
+      border-color: lighten($input-border, 16%);
+
+      &::-webkit-inner-spin-button {
+        display: none !important;
+      }
+
+      @include placeholder(transparent);
+
+      .placeholder {
+        color: transparent;
+      }
     }
   }
 
@@ -55,10 +68,22 @@
     .faux-input,
     select,
     textarea {
-      border: 1px solid lighten($input-border, 20%);
+      background-color: rgba($white, .5);
+      border-color: lighten($input-border, 16%);
 
       &:hover {
-        border: 1px solid $input-border;
+        background-color: $white;
+        border-color: lighten($input-border, 8%);
+      }
+
+      // &::-webkit-inner-spin-button {
+      //   display: none !important;
+      // }
+
+      @include placeholder(transparent);
+
+      .placeholder {
+        color: transparent;
       }
     }
   }
