--- a/src/styles/tink-fieldset.scss
+++ b/src/styles/tink-fieldset.scss
@@ -8,7 +8,7 @@
   padding: rem(15);
 
   /**
-   * Focus styling
+   * Default styling
    */
   input,
   .faux-input,
@@ -17,25 +17,18 @@
     transition: all .2s linear !important;
 
     &:focus {
-      background-color: $white;
+      background-color: $white !important;
       border: 1px solid $input-border-focus;
       // cursor: default !important;
     }
-  }
 
-  /**
-   * Disabled styling
-   */
-  input,
-  .faux-input,
-  select,
-  textarea {
     &[disabled] {
       background-color: transparent !important;
       border: 1px solid transparent !important;
       cursor: default !important;
     }
   }
+
 
   /**
    * OFF state
@@ -48,9 +41,9 @@
       background-color: rgba($white, 0);
       border-color: lighten($input-border, 16%);
 
-      &::-webkit-inner-spin-button {
-        display: none !important;
-      }
+      // &::-webkit-inner-spin-button {
+      //   display: none !important;
+      // }
 
       @include placeholder(transparent);
 
@@ -61,7 +54,7 @@
   }
 
   /**
-   * MOUSEOVER state
+   * HOVER state
    */
   &.mouseOver {
     input,
@@ -86,6 +79,12 @@
         color: transparent;
       }
     }
+  }
+
+  /**
+   * ACTIVE state
+   */
+  &.mouseOver {
   }
 
   // &.mouseOver {
