--- a/src/styles/tink-fieldset.scss
+++ b/src/styles/tink-fieldset.scss
@@ -18,15 +18,25 @@
 
     &:focus {
       background-color: $white !important;
-      border: 1px solid $input-border-focus;
+      border: 1px solid $input-border-focus !important;
       // cursor: default !important;
     }
 
     &[disabled] {
-      background-color: transparent !important;
+      background: transparent !important;
       border: 1px solid transparent !important;
       cursor: default !important;
+
+      &::-webkit-inner-spin-button,
+      ~ .timepicker-later,
+      ~ .timepicker-earlier {
+        display: none !important;
+      }
     }
+  }
+
+  [contenteditable] {
+    display: none !important;
   }
 
 
@@ -87,96 +97,21 @@
   &.mouseOver {
   }
 
-  // &.mouseOver {
-  //   input,
-  //   .faux-input,
-  //   select,
-  //   textarea {
-  //     border: 1px solid lighten($input-border, 20%);
-
-  //     &:hover {
-  //       border: 1px solid $input-border;
-  //     }
-  //   }
-  // }
-
-  // &-off {
-  //   input,
-  //   .faux-input,
-  //   select,
-  //   textarea {
-  //     background: transparent !important;
-  //     border: 1px solid transparent !important;
-  //     cursor: default !important;
-
-  //     .mouseOver {
-  //     }
-  //   }
-  // }
+  /**
+   * UNEDITABLE state
+   */
+  &.uneditable {
+    // input,
+    // .faux-input,
+    // select,
+    // textarea {
+    //   background: transparent !important;
+    //   border: 1px solid transparent !important;
+    //   cursor: default !important;
+    // }
+  }
 }
 
-
-// .the-fieldset {
-
-// form input[type=text]
-// {
-//   border:1px solid transparent;
-// }
-
-// .mouseOver{
-
-//   input[type=text]
-//   {
-//     border:1px solid #bbb !important;
-//   }
-// }
-//   .stick {
-//     background-color: rgba($white, .9);
-//     overflow: hidden;
-//     transition: box-shadow $animation-speed;
-
-//     h2.h3 {
-//       margin: rem(14 0);
-//     }
-//     &.is-sticky {
-//       box-shadow: 0 0 3px rgba($black, .5);
-//       z-index: 100 !important;
-//     }
-//   }
-
-//   .fieldset-editable-buttons {
-//     // visibility: hidden;
-//     transition: transform $animation-speed;
-//     transform: translate(0,-100%);
-
-//     padding: rem(4 0);
-
-//     .btn-transparent {
-//       background-color: transparent;
-//       border: none;
-//       color: $brand;
-//       font-weight: normal;
-
-//       &:hover {
-//         background-color: rgba($black, .1);
-//       }
-//     }
-//   }
-// }
-
-// .fieldset-editable {
-//   border-radius: $border-radius-base;
-//   margin: rem(8 0);
-//   padding: rem(15);
-//   transition: all $animation-speed linear;
-
-//   label {
-//     color: $gray;
-//     font-weight: normal;
-//     line-height: $line-height-base;
-//     margin: 1px 0 0; // Corrects border of input field
-//     padding: rem($padding-base-vertical $padding-base-horizontal 0 0);
-//   }
 
 //   input[type="checkbox"],
 //   input[type="radio"] {
