--- a/src/styles/tink-fieldset.scss
+++ b/src/styles/tink-fieldset.scss
@@ -38,7 +38,9 @@
   }
 
   input {
-    &::-webkit-inner-spin-button {
+    &::-webkit-inner-spin-button,
+    ~ .timepicker-later,
+    ~ .timepicker-earlier {
       transition: border ($animation-speed * 2) !important;
     }
   }
@@ -70,7 +72,9 @@
     }
 
     input {
-      &::-webkit-inner-spin-button {
+      &::-webkit-inner-spin-button,
+      ~ .timepicker-later,
+      ~ .timepicker-earlier {
         border-color: lighten($input-border, 16%) !important;
       }
     }
@@ -131,12 +135,16 @@
     }
 
     input {
-      &::-webkit-inner-spin-button {
+      &::-webkit-inner-spin-button,
+      ~ .timepicker-later,
+      ~ .timepicker-earlier {
         border-left-color: lighten($input-border, 16%) !important;
       }
 
       &:hover {
-        &::-webkit-inner-spin-button {
+        &::-webkit-inner-spin-button,
+        ~ .timepicker-later,
+        ~ .timepicker-earlier {
           border-left-color: lighten($input-border, 8%) !important;
         }
       }
