Fixed padding of editable fieldset inside cards or accordions

--- a/src/styles/tink-fieldset.scss
+++ b/src/styles/tink-fieldset.scss
@@ -232,3 +232,13 @@ html {
     }
   }
 }
+
+/**
+ * Fixes for editable fieldset when inside a card or accordion
+ */
+.card-body,
+.accordion-panel-body {
+  .fieldset-editable {
+    padding: rem($fieldset-editable-padding);
+  }
+}
